v2/deployment/route-backend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name:  budget-app-backend-route
  namespace: budget-app-production
spec:
  to:
    kind: Service
    name:  budget-app-backend-service
  port:
    targetPort: 8080
  tls:
    termination: edge
