v2/deployment/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name:  budget-app-frontend-route
  namespace: budget-app-production
spec:
  to:
    kind: Service
    name:  budget-app-frontend-service
  port:
    targetPort: 8080
  tls:
    termination: edge
